--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,11 @@ button:hover{
   left: 0;
   right: 0;
   border-radius: 5px;
-  transition: 0.5s ease-out;
+  transition: 0.8s;
+}
+
+.hide {
+  visibility: hidden;
 }
 
 .title {
@@ -157,7 +161,6 @@ button:hover{
 
 .win {
   background-color: var(--color-win);
-  transition: 1s ease-out;
 }
 
 .win a {
@@ -166,6 +169,7 @@ button:hover{
 
 .lose {
   background-color: var(--color-lose);
+  visibility: visible;
 }
 
 .lose a {
